# pytorch_demo_tutorial

./: .gitignore  README.md  perceptual_loss.py  pyproject.toml  test.py  train.py  utils.py
.dvc/: config
configs/: config.yaml
configs/dataset/: cats.yaml  dogs.yaml  pandas.yaml
configs/optimizer/: adam.yaml  adamw.yaml  sgd.yaml
configs/paths/: ec2.yaml  grid.yaml  local.yaml
datasets/: animals.dvc  dataset.py
datasets/lightly_outputs/2021-07-27/15-09-46/.hydra/: overrides.yaml
datasets/lightly_outputs/2021-07-27/15-13-41/: embeddings.csv  embeddings_sorted.csv
datasets/lightly_outputs/2021-07-27/15-13-41/.hydra/: config.yaml  hydra.yaml
models/: net.py
