[tool.poetry]
name = "pytorch_demo_tutorial"
version = "0.1.0"
description = ""
authors = ["Edward Li <edward.li@socure.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.9.0"
torchvision = "^0.10.0"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
wandb = "^0.10.33"
dvc = {extras = ["gdrive"], version = "^2.4.3"}
tensorboard = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
